--- a/package.xml
+++ b/package.xml
@@ -13,9 +13,11 @@
   <build_depend>rgbd</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>rgbd</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>message_runtime</run_depend>
 
 </package>
